feat: add batch items and calculate balances